<resources>
    <string name="app_name">Link-up</string>
    <string name="username">username</string>
    <string name="FirstName">First Name</string>
    <string name="LastName">Last Name</string>
    <string name="Email">Email</string>
    <string name="PhoneNum">Phone Number</string>
    <string name="password">Password</string>
    <string name="ConfPassword">Confirm Password</string>
    <string name="Activity_SignUp"><u>Sign Up</u></string>
    <string name="CodeVerfication">Verification Code</string>
    <string name="Activity_Guest"><u>Continue as a Guest</u></string>
    <string-array name="Categories">
        <item>Tutors</item>
        <item>Cosmetology</item>
        <item>Arts &amp; Design</item>
        <item>Tech Freelancers</item>
        <item>Voulnteering</item>
        <item>Home Services</item>
        <item>Therapy</item>
    </string-array>

</resources>