<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#033172">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="0.75"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Personal Information"
            android:textColor="@color/white"
            android:layout_gravity= "start"
            android:textStyle="bold"
            android:textSize="18sp"/>
        <EditText
            android:id="@+id/FNameService"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:backgroundTint="@color/white"
            android:hint="@string/FirstName"
            android:textColorHint="@color/white" />
        <EditText
            android:id="@+id/LNameService"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:backgroundTint="@color/white"
            android:hint="@string/LastName"
            android:textColorHint="@color/white" />
        <EditText
            android:id="@+id/EmailService"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:backgroundTint="@color/white"
            android:hint="@string/Email"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/PassService"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/white"
            android:textColor="@color/white"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/ConfPassService"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:backgroundTint="@color/white"
            android:hint="@string/ConfPassword"
            android:inputType="textPassword"
            android:textColorHint="@color/white" />

        <Button
            android:id="@+id/Next"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="#38b6ff"
            android:layout_marginRight="15dp"
            android:layout_gravity="right"
            android:text="Next" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:src="@drawable/link_up_footer" />
    </LinearLayout>


</LinearLayout>